[gd_scene load_steps=9 format=2]

[ext_resource path="res://Level/load/load.gd" type="Script" id=1]
[ext_resource path="res://Level/load/Pause.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Stop"

[sub_resource type="Animation" id=2]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel/ProgressBar:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 6, 11 ), Vector2( 6, -40 ) ]
}

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.145098, 0.215686, 0.541176, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.027451, 0.027451, 0.117647, 0.819608 )

[node name="load" type="Node"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Stop = SubResource( 1 )
"anims/load level" = SubResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Panel"]
anchor_left = 0.00585935
anchor_top = 0.0183333
anchor_right = 0.989258
anchor_bottom = 0.0533333
margin_left = 2.57492e-05
margin_top = 2.09808e-05
margin_right = 4.0
margin_bottom = 14.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="data" type="Node" parent="."]

[node name="Pause" type="Panel" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 6 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="Pause"]
pause_mode = 2
anchor_left = 0.0341797
anchor_top = 0.795
anchor_right = 0.175781
anchor_bottom = 0.951667
text = "Exit"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="continue" type="Button" parent="Pause"]
pause_mode = 2
anchor_left = 0.200195
anchor_top = 0.795
anchor_right = 0.577148
anchor_bottom = 0.951667
text = "Continue"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Exit2" type="Button" parent="Pause"]
pause_mode = 2
anchor_left = 0.607422
anchor_top = 0.795
anchor_right = 0.97168
anchor_bottom = 0.951667
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Development" type="Label" parent="."]
margin_left = 903.0
margin_top = 579.0
margin_right = 1014.0
margin_bottom = 593.0
text = "Development 0.5"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Pause/Exit" to="Pause" method="_on_Exit_pressed"]
[connection signal="pressed" from="Pause/continue" to="Pause" method="_on_continue_pressed"]
[connection signal="pressed" from="Pause/Exit2" to="Pause" method="_on_Exit2_pressed"]
